fix(gdp sorting): fix right spacing in gdp sorting dropbox

--- a/sass/pictures-gallery.scss
+++ b/sass/pictures-gallery.scss
@@ -130,9 +130,9 @@
       line-height: 80px;
     }
     .yotpo-nav-dropdown{
-      right: 56px;
+      right: 10px;
       position: absolute;
-      bottom: 5px;
+      bottom: 0px;
     }
   }
   .sort-loader {
